Update configure.html - Added options group
Added options group to pick type of stars shown.

Update configure.js - Add star_type handler

Added code for showing star_type value and saving it.

Update configure.min.js - Re-generated

--- a/configure.html
+++ b/configure.html
@@ -63,6 +63,22 @@
 
 			<div class="row">
 				<div class="col-xs-12">
+					<h2>Options</h3>
+					<form role="form" id="options-form">
+						<div class="form-group">
+							<label for="star_type">Star Type</label>
+							<select name="star_type" id="star_type" class="form-control">
+								<option value="0">Remaining stars for free drinks</option>
+								<option value="1">Current number of stars earned</option>
+							</select>
+							
+						</div>
+					</form>
+				</div>
+			</div>			
+
+			<div class="row">
+				<div class="col-xs-12">
 					<a href="#" class="btn btn-default" id="save-and-close">
 						<span class="glyphicon glyphicon-cloud-download"></span>
 						Save &amp; Close
@@ -71,6 +87,6 @@
 			</div>
 		</div>
 
-		<script src="js/configure.min.js"></script>
+		<script src="js/configure.js"></script>
 	</body>
 </html>
