Update configure.html - added min js back

--- a/configure.html
+++ b/configure.html
@@ -87,6 +87,6 @@
 			</div>
 		</div>
 
-		<script src="js/configure.js"></script>
+		<script src="js/configure.min.js"></script>
 	</body>
 </html>
