--- a/configure.html
+++ b/configure.html
@@ -17,8 +17,15 @@
 		<div class="container">
 			<div class="alert alert-info">
 				<p><strong>Hey, there!</strong></p>
-				<p>Thanks for being a loyal PebbleBucks user; you rock! I wanted to let you know that I&rsquo;ve gotten some emails from people saying that Starbucks login isn&rsquo;t working for them. Rest assured that I&rsquo;m on the case and should have an update out soon that addresses this issue as well as adds support for non-U.S. Starbucks accounts.</p>
-				<p class="text-right"><strong>Thanks, Alexsander Akers</strong></p>
+				<p>This is based on the 2.0.1 version of the PebbleBucks app by Alexsander Akers. 
+				His 3.0 version is currently not working for a large group of users, so I'm putting this modified/fixed version of 2.0.1 up for people to use in the interim.
+				<ul>
+				<li>I have fixed the balance and stars information.</li>
+				<li>I added an option to choose whether to pull current total star count or remaining stars before free drink.</li>
+				<li>I added long-press option to Top button to turn on backlight. Single-press Top button to turn light back off.</li>
+				</ul>
+				</p>
+				<p class="text-right"><strong>Thanks, Eric Wood</strong></p>
 			</div>
 
 			<div class="row">
