--- a/configure.html
+++ b/configure.html
@@ -16,6 +16,12 @@
 		</nav>
 		<div class="container">
 			<div class="alert alert-info">
+				<p><strong>*Update - 2015-02-07*</strong></p>
+				<p>I've been contacted by many people stating that the login is no longer working. 
+				It appears that Starbucks has changed their login form to use randomly generated field names.
+				I'm working to see if I can get around this.
+				In the meantime, the barcode portion of the app should still work, but the balance/stars information will not.
+				</p>
 				<p><strong>Hey, there!</strong></p>
 				<p>This is based on the 2.0.1 version of the PebbleBucks app by Alexsander Akers. 
 				His 3.0 version is currently not working for a large group of users, so I'm putting this modified/fixed version of 2.0.1 up for people to use in the interim.
